--- a/cv.tex
+++ b/cv.tex
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[circle,noedge,left]{./profile.jpg}
-\name{Angelo}{Carly}
+\name{Lauda}{Carly}
 \position{Computer graphics{\enskip\cdotp\enskip}Software Engineer}
 \address{Lily Boeykensstraat 10/001, 9000 Ghent, 7 Aug. 1998}
 
 \mobile{(+32) 472-27-18-52}
-\email{angelo.carly@pm.me}
+\email{lauda@nel.re}
 \homepage{nel.re}
-\github{angelocarly}
-\linkedin{angelo-carly-63a244162}
+\github{n-e-l}
+\linkedin{angelocarly}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
