--- a/cv/education.tex
+++ b/cv/education.tex
@@ -12,14 +12,14 @@
 %---------------------------------------------------------
 \cventry
 {Hogeschool West-Vlaanderen} % Institution
-{Computer \& Cyber Crime Professional @Home - BanaBa} % Degree
+{Computer \& Cyber Crime Professional} % Degree
 {Brugge} % Location
 {Sep. 2019 - Jun. 2020.} % Date(s)
 
 %---------------------------------------------------------
 \cventry
 {Hogeschool Gent} % Institution
-{Applied Informatics - Both Networking and Programming traject} % Degree
+{Applied Informatics - Both networking and programming specializations} % Degree
 {Ghent} % Location
 {Sep. 2016 - Dec. 2019} % Date(s)
 
