--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -15,9 +15,11 @@
     {Hybrid Software NV.} % Organization
     {Merelbeke} % Location
     {Aug. 2022 - present} % Date(s)
+	{Research and Development on a PDF 2.0 compliant PDF renderer using the Vulkan API.\break
+	Setup of a multi-platform build system using Jenkins.}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-		  \item{Research and Development on a GPU accelerated PDF renderer.}
+	  \item{}
       \end{cvitems}
   	}
 
@@ -27,9 +29,10 @@
     {Inetum Realdolmen} % Organization
     {Huizingen} % Location
     {Aug. 2021 - Aug. 2022} % Date(s)
+	{Development of an invoice validation rule system for the Belgian government.}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-	    \item {Development on an invoice validation rule system to the Belgian government.}
+	    \item {}
       \end{cvitems}
   	}
 
@@ -39,9 +42,10 @@
     {Crelan NV.} % Organization
     {Anderlecht} % Location
     {Sept. 2020 - Aug. 2021} % Date(s)
+	{Supported with the migration of Docker Hosts to a MCP OpenShift environment.}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-	    \item {Supported with the migration of Docker Hosts to a MCP OpenShift environment.}
+	    \item {}
       \end{cvitems}
   	}
 
@@ -51,9 +55,10 @@
     {Realdolmen} % Organization
     {Ghent/Kontich} % Location
     {Feb. 2019 - Jun. 2019} % Date(s)
+	{Developed a secure Identification Provider and Resource Server with Java Spring Boot and OAuth2.0}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-	    \item {Developed a secure Identification Provider (IDP) and Resource Server (SP) with Java Spring Boot and OAuth2.0}
+	    \item {}
       \end{cvitems}
     }
 
