--- a/cv/extracurricular.tex
+++ b/cv/extracurricular.tex
@@ -21,6 +21,6 @@
     {Combining code and art into abstract art pieces} % Affiliation/role
     {Algorithmic artist} % Organization/group
     {} % Location
-    {Aug. 2020} % Date(s)
+    {Aug. 2020 - Present} % Date(s)
 
 \end{cventries}
