--- a/cv/about.tex
+++ b/cv/about.tex
@@ -8,7 +8,7 @@
 %-------------------------------------------------------------------------------
 
 \begin{cvparagraph}
-	A passionate computer-science expert with expertise in computer-graphics and lower-level software development. I gain a lot of satisfaction from mastering \textbf{technical} and \textbf{challenging} projects, as well as \textbf{streamlining} existing processes in existing systems. I thrive in an \textit{open} and \textit{creative} work environment where my contributions can make a clear \textbf{impact}.
+	A computer science professional with expertise in computer graphics and lower-level software development. I'm driven by the satisfaction of mastering \textbf{technical} challenges and optimizing \textbf{complex} systems. I thrive in collaborative, \textbf{creative} environments where I can make a meaningful \textbf{impact}.
 \end{cvparagraph}
 
 %---------------------------------------------------------
