--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,18 +12,18 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Vulkan API, OpenGL, GLSL, C++, Rust, Bash, Java, Python, JavaScript/Typescript} % Skills
+    {Vulkan, OpenGL, GLSL, C++, Rust, Java, Python, JavaScript/Typescript} % Skills
 
 
 %---------------------------------------------------------
   \cvskill
     {Tools} % Category
-    {Git, Mercurial, Linux, Arch-Linux, Confluence, Jira, Trello, Trac} % Skills
+    {SCRUM, Agile, Git, Mercurial, Linux, NixOS, Confluence, Jira, Trac} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Back-end} % Category
-    {Docker, Node.js, REST API, ASP.NET, Java Spring Boot, mongodb, SQL} % Skills
+    {Docker, Node.js, REST API, ASP.NET, Java Spring Boot, neo4j, SQL} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -33,7 +33,7 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-	{Dutch - Native, English - Very Good, French - Decent} % Skills
+	{Dutch - Native, English - Very Good, French - Listening} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
